--- a/test.css
+++ b/test.css
@@ -1,53 +1,106 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-}
-
-.container {
-    width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    box-shadow: 4px 4px 4px grey;
-}
-
-h1 {
-    font-size: 50px;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #ccc;
-}
-
-p {
-    margin: 20px 0;
-    font-size: 1.1rem;
-}
-
-#message {
-    width: inherit;
-    border: 1px solid #eee;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 4px 4px 4px grey;
-    /* change the position properties here */
-    position: absolute;
-    bottom: 100px ;
-}
-
-#message * {
-    margin: 10px;
-}
-
-#message .header {
     margin: 0px;
-    background-color: #ddd;
-    padding: 10px;
-    font-weight: 900;
+    padding: 0px;
+}
+
+nav{
+    background-color: black;
+    width: 100%;
+    height: 70px;
+    color: white;
+    padding: 0px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-links{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style-type:none;
+}
+
+.nav a{
+    text-decoration: none;
+    color: white;
+}
+
+.btn{
+    height: 35px;
+    width: 100%;
+    background-color: blue;
+    color: white;
+    padding: 5px;
+}
+
+/* body style */
+.container{
+    width: 100%;
+    margin: 20px 50px;
+    align-items: center;
     display: flex;
     justify-content: space-between;
 }
 
-#message button {
-    height: 30px;
-    width: 80px;
+.top{
+    width: 500px;
+    background-color: white;
+    border-color: gray;
+    margin-bottom: 20px;
 }
+
+.blue{
+    width: 100%;
+    height: 120px;
+    background-color: aqua;
+}
+
+.image{
+    background-color: white;
+    height: 190px;
+    padding: 5px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+h3, p{
+    margin: 20px 0px;
+}
+
+.white h1{
+    margin-top: 90px;
+}
+
+.icon{
+    height: 300px;
+    width: 30px;
+}
+
+.white{
+    margin-left:  ;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
