--- a/Week1/Day 4/Core/Profile page/profile_user.css
+++ b/Week1/Day 4/Core/Profile page/profile_user.css
@@ -251,3 +251,12 @@ width: 40px;
         bottom: 20px;
         left: 50px;
 }
+
+/* .jdida a{
+    decira
+} */
+.container1{
+   width: 70%;
+   margin: auto 10px;
+
+}
